--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
     "tailwindcss": "^4.0.17",
+    "unplugin-vue-components": "^28.4.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@iconify-json/material-symbols": "^1.2.17",
+    "@iconify-json/tabler": "^1.2.17",
     "@types/node": "^22.13.14",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.2",
+    "unplugin-icons": "^22.1.0",
     "vite": "^6.2.0",
     "vue-tsc": "^2.2.4"
   }
