--- a/package.json
+++ b/package.json
@@ -9,21 +9,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primevue/auto-import-resolver": "^4.3.3",
     "@tailwindcss/vite": "^4.0.17",
-    "tailwindcss": "^4.0.17",
+    "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
+    "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.2.0",
+    "primevue": "^4.3.3",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-primeui": "^0.6.1",
     "unplugin-vue-components": "^28.4.1",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@iconify-json/ic": "^1.2.2",
     "@iconify-json/material-symbols": "^1.2.17",
     "@iconify-json/tabler": "^1.2.17",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.13.14",
     "@vitejs/plugin-vue": "^5.2.1",
+    "autoprefixer": "^10.4.21",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.2",
+    "postcss": "^8.5.3",
     "unplugin-icons": "^22.1.0",
-    "vite": "^6.2.0",
+    "vite": "6.2.6",
     "vue-tsc": "^2.2.4"
   }
 }
