--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@primevue/auto-import-resolver": "^4.3.3",
     "@tailwindcss/vite": "^4.0.17",
+    "@vueuse/core": "^13.1.0",
+    "axios": "^1.8.4",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "pinia": "^3.0.2",
@@ -31,10 +33,10 @@
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.13.14",
     "@vitejs/plugin-vue": "^5.2.1",
-    "autoprefixer": "^10.4.21",
     "@vue/tsconfig": "^0.7.0",
-    "typescript": "~5.8.2",
+    "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
+    "typescript": "~5.8.2",
     "unplugin-icons": "^22.1.0",
     "vite": "6.2.6",
     "vue-tsc": "^2.2.4"
