--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.4",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.2.0",
     "primevue": "^4.3.3",
