--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "devDependencies": {
     "@iconify-json/ic": "^1.2.2",
+    "@iconify-json/lineicons": "^1.2.4",
     "@iconify-json/material-symbols": "^1.2.17",
+    "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/tabler": "^1.2.17",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.13.14",
